2001-10-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Removed INJECT & INJECT_FLAGS.

2001-10-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* MTA.py (Postfix.deliver): Exit the deliver method by the same
	exit code as that of LOCAL_DELIVERY_AGENT's exit status.

	* Util.py: Replaced ERR_CONFIG and ERR_IO with EX_TEMPFAIL.
	
	* Defaults.py: Replace qmail-specific exit status codes with
	general codes that work under both Postfix and qmail.  An
	"success" code and a "defer" code were all that were necessary in
	the modules anyway.
	
	(LOCAL_DELIVERY_AGENT): New variable to specify the path to the
	local delivery agent, which is necessary if not running qmail.
	
	(MAIL_TRANSFER_AGENT): New variable to specify which mail transfer
	agent software we are running.
	
2001-10-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (RECIPIENT_DELIMITER): New variable specifing the
	character used to separate user names and address extensions.
	
	* Cookie.py (make_confirm_address): Replace references to `-' with
	RECIPIENT_DELIMITER.

	(make_sender_address): Ditto.

	(make_dated_address): Ditto.

	* Defaults.py (SENDMAIL): New variable defining the path to the
	sendmail program or sendmail compatibility interface.

2001-09-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (GLOBAL_TMDARC): Add a global configuration file
	(/etc/tmdarc) that is read first before ~/.tmdarc.  

	(TMDA_VERSION): Begin 0.38 development.

2001-09-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_sender_cookie): Support variable length HMACs
	via HMAC_BYTES.

	(confirmationmac): Ditto.

	(datemac): Ditto.

	* Defaults.py (HMAC_BYTES): New variable specifying the number of
	bytes for all HMACs.

2001-09-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.37 development.
